# Python-OC-Lettings-FR

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  manage.py  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
docs/: api.rst  conf.py  database.rst  deployment.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  requirements.txt  technologies.rst
lettings/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_migrate_data.py  0003_alter_address_options.py
lettings/templates/lettings/: index.html
lettings/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
memo/: 01_METHODES_MIGRATION.md  02_CREATION_APP_LETTINGS.md  03_MIGRATION_DONNEES_LETTINGS.md  04_CREATION_APP_PROFILES.md  04_SENTRY_ET_LOGGING.md  05_SUPPRESSION_ANCIENS_MODELES.md  06_CORRECTIONS_TESTS_MIGRATIONS.md  CHANGELOG-cicd.md  CHANGELOG.md  ci-cd.md  docker-commands.md  docker-local-setup.md  docker.md  documentation.md  guide_generation_documentation.md  guide_html_bootstrap.md  problemes-projet.md  procedure_verification_deploiement.md  python-django.md  render.md  soutenance_environnement_local.md
memo/livrables/: Read The Docs.txt  repository GitHub.txt
oc_lettings_site/: admin.py  apps.py  asgi.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
oc_lettings_site/migrations/: 0002_delete_old_models.py
oc_lettings_site/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
profiles/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_migrate_data.py  0003_alter_profile_user.py
profiles/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
templates/: 404.html  500.html  base.html  index.html
